:iphone: prevents overflow on mobile

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -38,6 +38,10 @@ body {
   overflow-x: hidden;
 }
 
+#app{
+  overflow-x: hidden;
+}
+
 li {
   list-style: none;
 }
