--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body {
   overflow-x: hidden;
 }
 
+#app {
+  overflow-x: hidden;
+}
+
 li {
   list-style: none;
 }
